Color, Tuple, Vector2UI.  Moved files around.

--- a/DwarfHovel/CMakeLists.txt
+++ b/DwarfHovel/CMakeLists.txt
@@ -25,7 +25,7 @@ list(APPEND CMAKE_PREFIX_PATH "C:/glew-2.1.0")
 find_package(GLEW REQUIRED)
 
 # Set the include directories and link libraries
-include_directories(${SDL2_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR})
+include_directories("./include" ${SDL2_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIR})
 link_directories(${SDL2_LIBRARY_DIRS})
 link_libraries(${SDL2_LIBRARIES} ${GLEW_LIBRARIES} ${OPENGL_LIBRARIES})
 
@@ -35,7 +35,7 @@ file(COPY "render.frag" "render.vert" DESTINATION ${CMAKE_BINARY_DIR}/${CMAKE_PR
 #set_source_files_properties(main.cpp PROPERTIES OBJECT_DEPENDS "${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}/render.vert")
 
 # Add your project executable here
-add_executable(DwarfHovel main.cpp "logger.h" "logger.cpp" "config.h" "system.h" "system.cpp" "sdl_error.h" "sdl_error.cpp" "window.h" "window.cpp" "glew_error.h" "glew_error.cpp" "gl_shader.cpp" "gl_shader.h" "gl_program.h" "gl_program.cpp" "texture.h" "texture.cpp" "gl_error.h" "gl_error.cpp")
+add_executable(DwarfHovel "src/main.cpp" "include/logger.h" "src/logger.cpp" "include/config.h" "include/system.h" "src/system.cpp" "include/sdl_error.h" "src/sdl_error.cpp" "include/window.h" "src/window.cpp" "include/glew_error.h" "src/glew_error.cpp" "src/gl_shader.cpp" "include/gl_shader.h" "include/gl_program.h" "src/gl_program.cpp" "include/Texture.h" "src/Texture.cpp" "include/gl_error.h" "src/gl_error.cpp" "include/Color.h" "src/Color.cpp" "include/Tuple.h"  "include/Vector2UI.h")
 
 add_custom_target(assets
 	COMMAND "${CMAKE_COMMAND}" -E copy_if_different "render.frag" "${CMAKE_BINARY_DIR}/${CMAKE_PROJECT_NAME}/render.frag"
