--- a/DwarfHovel/settings.json
+++ b/DwarfHovel/settings.json
@@ -1,3 +1,12 @@
 {
-	"HMM": 0
+	"log_level": "DEBUG",
+	"window_title": "Dwarf Hovel",
+	"virtual_window_size": {
+		"x": 256,
+		"y": 224
+	},
+	"actual_window_size": {
+		"x": 1024,
+		"y": 896
+	}
 }
