Game states and more events.

--- a/DwarfHovel/CMakeLists.txt
+++ b/DwarfHovel/CMakeLists.txt
@@ -26,6 +26,8 @@ add_executable(DwarfHovel
     "src/main.cpp"
 
     "src/Color.cpp"
+    "src/GameState.cpp"
+    "src/GameStateManager.cpp"
     "src/gl_error.cpp"
     "src/gl_program.cpp"
     "src/gl_shader.cpp"
