--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
 		"type_traits": "cpp",
 		"xlocmon": "cpp",
 		"xlocnum": "cpp",
-		"xtr1common": "cpp"
+		"xtr1common": "cpp",
+		"queue": "cpp"
 	}
 }
