Don't render hidden elements.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
 		"vector": "cpp",
 		"xstring": "cpp",
 		"xlocmes": "cpp",
-		"algorithm": "cpp"
+		"algorithm": "cpp",
+		"xiosbase": "cpp"
 	}
 }
