Main menu separated from demo state.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
 		"xstring": "cpp",
 		"xlocmes": "cpp",
 		"algorithm": "cpp",
-		"xiosbase": "cpp"
+		"xiosbase": "cpp",
+		"string": "cpp"
 	}
 }
