--- a/DwarfHovel/CMakeLists.txt
+++ b/DwarfHovel/CMakeLists.txt
@@ -29,22 +29,24 @@ add_executable(DwarfHovel
     "src/ui/UIElement.cpp"
 	"src/ui/UILabel.cpp"
 
-	"src/bitmap_templates.cpp"
-    "src/bitmaps.cpp"
-    "src/CharacterTestState.cpp"
-    "src/DemoGameState.cpp"
-    "src/GameState.cpp"
-    "src/GameStateManager.cpp"
-    "src/gl_error.cpp"
+	"src/gl_error.cpp"
     "src/gl_program.cpp"
     "src/gl_shader.cpp"
     "src/glew_error.cpp"
-    "src/Logger.cpp"
-	"src/MainMenuGameState.cpp"
-    "src/OEM437.cpp"
     "src/sdl_error.cpp"
+
+    "src/states/CharacterTestState.cpp"
+    "src/states/DemoGameState.cpp"
+    "src/states/GameState.cpp"
+    "src/states/GameStateManager.cpp"
+	"src/states/MainMenuGameState.cpp"
+	"src/states/SoundFXGameState.cpp"
+
+	"src/bitmap_templates.cpp"
+    "src/bitmaps.cpp"
+    "src/Logger.cpp"
+    "src/OEM437.cpp"
     "src/Settings.cpp"
-	"src/SoundFXGameState.cpp"
     "src/System.cpp"
     "src/Texture.cpp"
     "src/Window.cpp"
