--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -19,6 +19,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
+    - name: Download Dependencies
+      run: |
+        Invoke-WebRequest -URI https://github.com/libsdl-org/SDL/releases/download/release-2.26.5/SDL2-devel-2.26.5-VC.zip -OutFile C:\Temp\SDL2-devel-2.26.5-VC.zip
+        dir C:\Temp
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -30,8 +35,6 @@ jobs:
     - name: Build
       # Build your program with the given configuration
       run: |
-        Invoke-WebRequest -URI https://github.com/libsdl-org/SDL/releases/download/release-2.26.5/SDL2-devel-2.26.5-VC.zip -OutFile C:\Temp\SDL2-devel-2.26.5-VC.zip
-        dir C:\Temp
         cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
       shell: powershell
 
