--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -22,11 +22,16 @@ jobs:
     
     - name: Download Dependencies
       run: |
+        Write-Output "Setting up SDL2.26.5..."
         Invoke-WebRequest -URI https://github.com/libsdl-org/SDL/releases/download/release-2.26.5/SDL2-devel-2.26.5-VC.zip -OutFile C:\Temp\SDL2-devel-2.26.5-VC.zip
-        dir C:\Temp
         Expand-Archive C:\Temp\SDL2-devel-2.26.5-VC.zip -DestinationPath C:\
         Rename-Item -Path "C:\SDL2-2.26.5" -NewName "C:\SDL2"
         dir C:\SDL2
+        
+        Write-Output "Setting up glew-2.1.0..."
+        Invoke-WebRequest -URI https://gigenet.dl.sourceforge.net/project/glew/glew/2.1.0/glew-2.1.0.zip -OutFile C:\Temp\glew-2.1.0.zip
+        Expand-Archive C:\Temp\glew-2.1.0.zip -DestinationPath C:\
+        dir C:\glew-2.1.0
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -39,6 +44,7 @@ jobs:
       # Build your program with the given configuration
       run: |
         cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        dir ${{github.workspace}}/build
       shell: powershell
 
     - name: Test
