--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -26,12 +26,10 @@ jobs:
         Invoke-WebRequest -URI https://github.com/libsdl-org/SDL/releases/download/release-2.26.5/SDL2-devel-2.26.5-VC.zip -OutFile C:\Temp\SDL2-devel-2.26.5-VC.zip
         Expand-Archive C:\Temp\SDL2-devel-2.26.5-VC.zip -DestinationPath C:\
         Rename-Item -Path "C:\SDL2-2.26.5" -NewName "C:\SDL2"
-        dir C:\SDL2
         
         Write-Output "Setting up glew-2.1.0..."
         Invoke-WebRequest -URI https://github.com/nigels-com/glew/releases/download/glew-2.2.0/glew-2.2.0-win32.zip -OutFile C:\Temp\glew-2.2.0.zip
         Expand-Archive C:\Temp\glew-2.2.0.zip -DestinationPath C:\
-        dir C:\glew-2.2.0
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
@@ -44,7 +42,8 @@ jobs:
       # Build your program with the given configuration
       run: |
         cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-        dir ${{github.workspace}}/build
+        dir ${{github.workspace}}/build/DwarfHovel
+        dir ${{github.workspace}}/build/x64
       shell: powershell
 
     - name: Test
