--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -42,7 +42,7 @@ jobs:
       # Build your program with the given configuration
       run: |
         cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-        dir ${{github.workspace}}/build/x64/Release
+        dir ${{github.workspace}}/build/DwarfHovel/Release
       shell: powershell
 
     - name: Test
