--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -44,6 +44,8 @@ jobs:
         cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
         dir ${{github.workspace}}/build/DwarfHovel/Release
         dir ${{github.workspace}}/build/
+        dir ${{github.workspace}}/build/x64/
+        dir ${{github.workspace}}/build/x64/DwarfHovel/
       shell: powershell
 
     - name: Test
