--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -20,9 +20,6 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Add msbuild to PATH
-      uses: microsoft/setup-msbuild@v1.0.1
-
     - name: Download Dependencies
       run: |
         Write-Output "Setting up SDL2.26.5..."
@@ -38,13 +35,7 @@ jobs:
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: |
-        cmake -B ${{github.workspace}}/build -DCMAKE_CXX_COMPILER=cl.exe -G Ninja `
-          -DCMAKE_EXPORT_COMPILE_COMMANDS=ON -DCMAKE_BUILD_TYPE=RelWithDebInfo `
-          -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_DEST_WIN }}\scripts\buildsystems\vcpkg.cmake `
-          -DVCPKG_TARGET_TRIPLET=x64-windows-static-release `
-          -DVERBOSE_CONFIGURE=ON `
-          -DCMAKE_CXX_COMPILER=cl `
-          -DCMAKE_C_COMPILER=cl
+        cmake -B ${{github.workspace}}/build
       shell: powershell
 
     - name: Build
