--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -9,7 +9,6 @@ on:
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
-  WIN32: 1
 
 jobs:
   build:
@@ -36,13 +35,13 @@ jobs:
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: |
-        cmake -B ${{github.workspace}}/build
+        cmake -B ${{github.workspace}}/build -DWIN32=1
       shell: powershell
 
     - name: Build
       # Build your program with the given configuration
       run: |
-        cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}} -DWIN32=1
         dir ${{github.workspace}}/build/DwarfHovel/${{env.BUILD_TYPE}}
         dir ${{github.workspace}}/build/
         dir ${{github.workspace}}/build/x64/${{env.BUILD_TYPE}}/ALL_BUILD/
@@ -54,5 +53,5 @@ jobs:
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: |
-        ctest -C ${{env.BUILD_TYPE}}
+        ctest -C ${{env.BUILD_TYPE}} -DWIN32=1
       shell: powershell
