--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Build
       # Build your program with the given configuration
       run: |
-        cmake -DWIN32=1 --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
+        cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
         dir ${{github.workspace}}/build/DwarfHovel/${{env.BUILD_TYPE}}
         dir ${{github.workspace}}/build/
         dir ${{github.workspace}}/build/x64/${{env.BUILD_TYPE}}/ALL_BUILD/
@@ -53,5 +53,5 @@ jobs:
       # Execute tests defined by the CMake configuration.
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: |
-        ctest -DWIN32=1 -C ${{env.BUILD_TYPE}}
+        ctest -C ${{env.BUILD_TYPE}}
       shell: powershell
